--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://www.iosdev.net
+url: http://blog.iosdev.net
 title: 迷途老码的博客
 subtitle: 分享iOS开发技术和经验的博客
 author: photondragon
